Closes #3 hold know button

--- a/src/App.css
+++ b/src/App.css
@@ -142,8 +142,9 @@ margin: 0 10px 0 10px;
   box-shadow: 1px 1px 2px grey;
   padding-bottom: 30px;
 }
-.wordBox{
-
+#clickableArea{
+height: 250px;
+display: block;
 }
 .theEnglishWord{
   text-align: center;
