--- a/src/App.css
+++ b/src/App.css
@@ -240,6 +240,7 @@ padding-top: 10px;
   font-size: 1.3rem;
   font-weight: bold;
   font-family: serif;
-  color:rgb(241, 14, 26);
+  color:rgb(214, 35, 140);
   margin-bottom: 10px;
+  text-shadow: 1px 1px 4px darkgray;
 }
