--- a/src/App.css
+++ b/src/App.css
@@ -252,3 +252,12 @@ padding-top: 10px;
   transform: translateX(-50%);
   padding: 0;
 }
+.manual{
+  position: fixed;
+  bottom: 5px;
+  right: 20px;
+  font-size: large;
+  color: black;
+  padding: 5px;
+  background-color: burlywood;
+}
